# Mental-Health-Support-Chatbot

./: .env.example  .gitignore  README.md  ingest_data.py  intent_classifier.py  main.py  pyproject.toml  test_emotion.py  test_rag.py
Notebooks/: README.md  language-identifier.ipynb  model2-emotion.ipynb
app/: __init__.py  config.py  dependencies.py  ingest_data.py  intent_classifier.py  main.py  rag_retriever.py  router.py  schemas.py
src/: README.md  config.py  ingest_data.py  intent_classifier.py  main.py  rag_retriever.py  router.py
src/core/: README.md  __init__.py  interfaces.py  responses.py  schemas.py
src/database/: README.md  __init__.py  qdrant.py
src/rag/: README.md  __init__.py  embedder.py  pipeline.py  reranker.py  retriever.py
src/services/: README.md  __init__.py  classifier.py  guardrail.py  intent.py  llm.py  translator.py
static/: README.md
static/css/: style.css
static/js/: script.js
templates/: README.md  index.html
tests/: README.md  __init__.py  test_intent.py
