[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "datasets",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.3", 
    "openai>=2.41.0",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "scikit-learn==1.6.1",
    "sentence-transformers>=5.5.1",
    "torch==2.10.0",
    "transformers==5.0.0",
]
