[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "datasets",
    "python-dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "openai>=2.41.0",
    "qdrant-client>=1.18.0",
    "scikit-learn==1.6.1",
    "sentence-transformers>=5.5.1",
    "torch==2.10.0",
    "transformers==5.0.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
extraPaths = ["."]
